@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-26T08:25:11Z",
+  "timestamp" : "2022-06-26T16:29:02Z",
   "count_outdated" : 631,
   "uniques_outdated" : 326,
-  "count" : 657,
+  "count" : 658,
   "uniques" : 342,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
