@@ -1,3 +1,10 @@
+2022-06-26T16:29:02Z:
+* notice: last 14d: unq all: 4 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 326 631 / 342 657
+* notice: next accum: outdated-unq outdated-all / unq all: 326 631 / 342 658
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-26]
+
 2022-06-26T08:25:11Z:
 * notice: last 14d: unq all: 4 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 326 631 / 341 657
